--- a/extension/popup.html
+++ b/extension/popup.html
@@ -709,7 +709,7 @@
     </div>
     
     
-    <div class="version" id="version">v1.0.2</div>
+    <div class="version" id="version"></div>
   </div>
   
   <script src="user-info.js"></script>
