fixed multi langueage messages

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -716,7 +716,7 @@
         <label class="control-label">🖱️ <span id="catFollowLabel"></span></label>
         <div class="toggle-container">
           <label class="toggle">
-            <input type="checkbox" id="followMouseToggle">
+            <input type="checkbox" id="followMouseToggle" checked>
             <span class="slider"></span>
           </label>
         </div>
